[tool.poetry]
name = "spcs-instruments"
version = "0.1.0"
description = ""
authors = ["Jamin Martin <jamin.martin1@gmail.com>"]
readme = "README.md"
packages = [{include = "spcs_instruments", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "~1.26.4"
matplotlib = "~3.9.0"
pandas = "~2.2.2"
scipy = "~1.13.0"
toml = "^0.10.2"
pyvisa = "^1.14.1"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
