[project]
name = "spcs-instruments"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JaminMartin", email = "jamin.martin1@gmail.com" }
]
dependencies = [
    "pytest>=8.2.2",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.2",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pandas>=2.2.2",
    "pyusb>=1.2.1",
    "toml>=0.10.2",
    "pyserial>=3.5",
    "maturin>=1.7.0",
    "pip>=24.1.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"
 
[tool.rye]
managed = true
dev-dependencies = [] 

[tool.maturin]
module-name = "spcs_instruments._spcs_cli"
features = ["pyo3/extension-module"]

[project.scripts]
"cli" = "spcs_instruments.cli:runner"
