[project]
name = "spcs-instruments"
version = "0.9.4"
description = "A collection of python drivers with native support for use in Rex"
authors = [
    { name = "Jamin Martin", email = "jamin.martin1@gmail.com" }
]
dependencies = [
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.2",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pandas>=2.2.3",
    "pyusb>=1.2.1",
    "toml>=0.10.2",
    "pyserial>=3.5",
    "requests>=2.32.3",
    "sshtunnel>=0.4.0",
    "seabreeze>=2.10.1",
    "polars>=1.29.0",
    "rex-utils>=0.1.3",
]
readme = "README.md"
requires-python = ">= 3.13"
[project.scripts]
"spcs_version" = "spcs_instruments.cli:spcs_version"


[build-system]
requires = ["uv_build>=0.8.23,<1.0.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
