[package]
name = "pyfex"
version = "0.3.3"
edition = "2021"


[lib]
name = "spcs_rust_utils"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.22.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
clap = { version = "4.5.9", features = ["derive", "cargo"] }
lettre = { version = "0.11", features = ["builder"] }
toml = "0.5"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
regex = "1"
tempfile = "3.3"
